// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography component Component matches snapshot H1 renders correctly 1`] = `
<Text
  size="h1"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 38,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H2 renders correctly 1`] = `
<Text
  size="h2"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 30,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H3 renders correctly 1`] = `
<Text
  size="h3"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H4 renders correctly 1`] = `
<Text
  size="h4"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H5 renders correctly 1`] = `
<Text
  size="h5"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot H6 renders correctly 1`] = `
<Text
  size="h6"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;

exports[`Typography component Component matches snapshot Text renders correctly 1`] = `
<Text
  color="black"
  size="md"
  style={
    Array [
      Object {
        "color": "#000",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "textDecorationColor": "black",
        "textDecorationLine": "none",
        "textDecorationStyle": "solid",
      },
    ]
  }
>
  Abc 123
</Text>
`;
